// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
        },
      ]
    }
    value={false}
  />
</View>
`;

exports[`<Switch> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
        },
      ]
    }
    value={false}
    visible={true}
  />
</View>
`;

exports[`<Switch> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        Object {
          "color": "#9b9b9b",
        },
        false,
        false,
        Object {
          "marginRight": 10,
        },
      ]
    }
  >
    Hello world
  </Text>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
        },
      ]
    }
    value={false}
  />
</View>
`;

exports[`<Switch> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "height": 44,
        "marginBottom": 10,
      },
      Object {
        "backgroundColor": "orange",
      },
    ]
  }
>
  <RCTSwitch
    activeThumbColor="#bdbdbd"
    activeTrackColor="#e0e0e0"
    disabled={false}
    onChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "height": 31,
          "width": 51,
        },
        Object {
          "height": 24,
        },
      ]
    }
    value={false}
  />
</View>
`;
